--- a/po/ne.po
+++ b/po/ne.po
@@ -1,111 +1,104 @@
+# Nepali Translation of yelp
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the yelp package.
+# Pawan Chitrakar <pawan@nplinux.org>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: GNOME 2.0\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
+"Project-Id-Version: yelp\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-07-03 22:08+0200\n"
 "PO-Revision-Date: 2003-07-1 23:18GMT\n"
 "Last-Translator: Pawan Chitrakar <pawan@nplinux.org>\n"
 "Language-Team:  Nepali <info@mpp.org.np>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 0.9.5\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "एप्लिकेशन"
+msgstr "एपलेटस्"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "एप्लिकेशन"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "डेक्सटप"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "बिकास"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "बिकास"
+msgstr "बिकासक्रम स्थिति"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "बिकास"
+msgstr "बिकासका साधन"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/संसोधन"
+msgstr "संसोधक"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "एप्लिकेशन"
+msgstr "शिक्षामुलक एप्लिकेशन"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "खेल तथा मनोरन्जन"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "साधारण"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "सहायताको बिषय सुची"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "एप्लिकेशन"
+msgstr "ईन्टरनेट एप्लिकेशन"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "केडिइ"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Rutinas del núcleo"
+msgstr "कर्नेल"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "एप्लिकेशन"
+msgstr "मल्टिमिडिया एप्लिकेशन"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "अफिस एप्लिकेशन"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "एप्लिकेशन"
+msgstr "साइन्टिफिक एप्लिकेशन"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "सुरक्षण"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "System Calls"
+msgstr "सिस्टम"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "साधनहरू"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "एप्लिकेशन"
+msgstr "एक्स एप्लिकेशन"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,11 +110,11 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "खोज्ने"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "खोज्ने:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,58 +130,53 @@ msgstr ""
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "Yelp"
+msgstr "येल्प"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Yelp Factory"
+msgstr "येल्प फ्याकटरी"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:439 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr ""
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:454 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "मेमोरी नपुग"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:642 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "शीर्षपृष्ठ"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:644 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
 msgstr "सहायताको बिषय सुची"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:662 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "थाहा नभएको"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "El documento «%s» no existe"
+msgstr "छानेको कागजात खुल्न सकेन"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "El documento «%s» no existe"
+msgstr "छानेको पृष्ट यो कागजातमा भेटिएन"
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "El documento «%s» no existe"
+msgstr "सहायताको बिषय सुची पढ्न सकिएन"
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
 msgstr ""
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "El documento «%s» no existe"
+msgstr "छानेको फाईल भेटिएन"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -197,11 +185,11 @@ msgstr ""
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp खोल्न सकिएन: '%s'"
+msgstr "येल्प खोल्न सकिएन: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "नयां Window खोल्न सकिएन"
+msgstr "नयां विन्डो खोल्न सकिएन"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -238,19 +226,19 @@ msgstr "System Calls"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Biblioteca de funciones"
+msgstr ""
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Rutinas del núcleo"
+msgstr ""
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Hardware Devices"
+msgstr ""
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "Configuration फाईल"
+msgstr "कन्फिगुरेसन फाईल"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -258,37 +246,36 @@ msgstr "खेलहरू"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr "Overviews"
+msgstr ""
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "System Administration"
+msgstr "सिस्टम "
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Documents"
+msgstr "कागजत युआरआई"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "कागजत युआरआई मिलाउ"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
-#: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#: src/yelp-toc-pager.c:490
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Yelp खोल्न सकिएन: '%s'"
+msgstr "OMF फाईल खोल्न सकिएन: '%s'"
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:887
 msgid "Categories"
 msgstr "समुहहरू"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:901
 msgid "Documents"
-msgstr "Documents"
+msgstr "कागजतहरू"
 
 #: src/yelp-window.c:249
 msgid "/_File"
@@ -296,30 +283,27 @@ msgstr "/फाईल"
 
 #: src/yelp-window.c:250
 msgid "/File/_New window"
-msgstr "/फाईल/ नयां Window "
+msgstr "/फाईल/ नयां विन्डो"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/फाईल/ Window बन्द गर्नुस "
+msgstr "/फाईल/ विन्डो बन्द गर्नुस "
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
 msgstr "/संसोधन"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
 msgstr "/संसोधन/पृष्ठमा  खोजनुस"
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
 msgstr "/संसोधन/फेरि खोजनुस"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/संसोधन/फेरि खोजनुस"
+msgstr "/संसोधन/पहिलो खोजनुस"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -338,24 +322,20 @@ msgid "/Go/_Home"
 msgstr "/जाउ/मुख्य पृष्ठ"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
 msgstr "/जाउ"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "अघिल्लो"
+msgstr "/जाउ/अघिल्लो"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/जाउ/Index"
+msgstr "/जाउ/पछिल्लो"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "सहायताको बिषय सुची"
+msgstr "/जाउ/सहायताको बिषय सुची"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -367,7 +347,7 @@ msgstr "/सहायता/बारेमा..."
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
-msgstr "Help Browser"
+msgstr "सहायता खोज"
 
 #: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
@@ -397,54 +377,53 @@ msgstr "मुख्य पृष्ठ"
 msgid "Go to home view"
 msgstr "मुख्य पृष्ठमा जानुस"
 
-#: src/yelp-window.c:860
+#: src/yelp-window.c:858
 msgid "Loading..."
-msgstr "Loading..."
+msgstr "लोडिङ्ग..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1306
 msgid "translator_credits"
 msgstr ""
-"Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
-"Germán Poo Caamaño <gpoo@ubiobio.cl>"
+"पावन चित्रकार <pawan@nplinux.org>"
 
-#: src/yelp-window.c:1306
-#, fuzzy
+
+#: src/yelp-window.c:1312
 msgid "A Help Browser for GNOME"
-msgstr "Help Browser for GNOME 2.0"
+msgstr "जी-नोमको सहायता"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "यो लेखको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "यो विवलियोग्राफिको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "यो किताबको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "यो अध्यायको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
@@ -452,11 +431,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "यो ग्लोसरिको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "यो सूचीको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
@@ -472,16 +451,15 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "यो शाखाको बारेमा"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "एप्लिकेशन"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
@@ -489,7 +467,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "लेख"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
@@ -497,27 +475,27 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "लेखक"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "लेखकहरू"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "विवलोग्राफि"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "किताब"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "सावधान"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "अध्याय"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
@@ -533,7 +511,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "सर्वाधिकार"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
@@ -541,37 +519,35 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "मिति"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "शाखा"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/संसोधन"
+msgstr "संसोधन"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "ई-मेल"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "उदाहरण"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "चित्र"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "ग्लोसरि"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "आवश्यक"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -583,7 +559,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "तह"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
@@ -591,7 +567,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "सन्देश तह"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
@@ -599,7 +575,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "टिपोट"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
@@ -615,7 +591,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "भाग"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
@@ -623,11 +599,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "प्रकाशक"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "प्रकाशकहरू"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
@@ -651,23 +627,21 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "हेर"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "यो पनि हेर"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
 msgstr "सुचीपत्र"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "तालिका"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
 msgstr "सहायताको बिषय सुची"
 
@@ -677,15 +651,15 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "शीर्षक"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "चेतावनी"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME को सहयोग लिनुस"
+msgstr "जी-नोम को सहयोग लिनुस"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
