--- a/po/he.po
+++ b/po/he.po
@@ -1,117 +1,107 @@
 # translation of yelp.HEAD.he.po to Hebrew
 # translation of yelp.HEAD.po to Hebrew
 # This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# Gil 'Dolfin' Osher <dolfin@rpg.org.il>, 2002,2003
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
+# Gil 'Dolfin' Osher <dolfin@rpg.org.il>, 2002,2003.
+# Gil Osher <dolfin@rpg.org.il>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2003-06-20 00:55+0300\n"
-"Last-Translator: Gil 'Dolfin' Osher <dolfin@rpg.org.il>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-07-08 21:14+0200\n"
+"PO-Revision-Date: 2004-07-09 15:21+0300\n"
+"Last-Translator: Gil Osher <dolfin@rpg.org.il>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "יישומים"
+msgstr "יישומונים"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "יישומים"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - שולחן העבודה"
+msgstr "שולחן עבודה"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "פיתוח"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "פיתוח"
+msgstr "סביבות פיתוח"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "פיתוח"
+msgstr "כלי פיתוח"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_עריכה"
+msgstr "עורכים"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "יישומים"
+msgstr "יישומים חינוכיים"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "משחקים ובידור"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "כללי"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "תכני עזרה"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "יישומים"
+msgstr "יישומי אינטרנט"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "שגרות גרעין"
+msgstr "גרעינים"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "יישומים"
+msgstr "יישומי מולטימדיה"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "יישומי משרד ופרודוקטיביות"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "יישומים"
+msgstr "יישומים מדעיים"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "אבטחה"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "קריאות מערכת"
+msgstr "מערכת"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "עזרים"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "יישומים"
+msgstr "יישומי X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -119,15 +109,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "תלוי _רשיות"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "מצא"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_מצא: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -139,7 +129,7 @@ msgstr "ה_קודם"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_עטוף סביב"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -149,52 +139,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "יצרן Yelp"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:439 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "לא נמצא מאפיין href ב yelp:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:454 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "אין מספיק זיכרון"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:642 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "עמוד כותרת"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:644 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "תכני עזרה"
+msgstr "תכנים"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:662 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "לא ידוע"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "המסמך '%s' אינו קיים"
+msgstr "המסמך הנבחר לא יכל להיפתח"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "המסמך '%s' אינו קיים"
+msgstr "העמוד הנבחר לא נמצא במסמך."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "המסמך '%s' אינו קיים"
+msgstr "תוכן העניינים לא יכל להיקרא"
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "מסמכי DocBook SGML לא נתמכים עוד."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "המסמך '%s' אינו קיים"
+msgstr "הקובץ הנבחר לא יכל להיקרא"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -271,28 +256,27 @@ msgid "System Administration"
 msgstr "ניהול מערכת"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "מסמכים"
+msgstr "כתובת מסמך"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "כתובת המסמך לא יכל להיקרא"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: מספר ההפסקות שלילי."
 
-#: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#: src/yelp-toc-pager.c:490
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "לא ניתן להפעיל את Yelp: '%s'"
+msgstr "לא ניתן לטעון את קובץ ה OMF '%s'."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:887
 msgid "Categories"
 msgstr "קטגוריות"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:901
 msgid "Documents"
 msgstr "מסמכים"
 
@@ -313,19 +297,16 @@ msgid "/_Edit"
 msgstr "/_עריכה"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/עריכה/_מצא בעמוד..."
+msgstr "/עריכה/_מצא..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/עריכה/_מצא שוב"
+msgstr "/עריכה/מצא ה_בא"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/עריכה/_מצא שוב"
+msgstr "/עריכה/מצא _קודם"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -344,24 +325,20 @@ msgid "/Go/_Home"
 msgstr "/מעבר/_הביתה"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_מעבר"
+msgstr "/מעבר/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "ה_קודם"
+msgstr "/מעבר/עמוד _קודם"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/מעבר/_אינדקס"
+msgstr "/מעבר/עמוד ה_בא"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "תכני עזרה"
+msgstr "/מעבר/_תכנים"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -403,13 +380,13 @@ msgstr "בית"
 msgid "Go to home view"
 msgstr "לך לתצוגת בית"
 
-#: src/yelp-window.c:860
+#: src/yelp-window.c:858
 msgid "Loading..."
 msgstr "טוען..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1306
 msgid "translator_credits"
 msgstr ""
 "גיל אשר\n"
@@ -418,168 +395,165 @@ msgstr ""
 "פרויקט linBrew\n"
 "http://linbrew.sourceforge.net"
 
-#: src/yelp-window.c:1306
+#: src/yelp-window.c:1312
 msgid "A Help Browser for GNOME"
 msgstr "דפדפן עזרה ל GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "אודות מאמר זה"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "אודות ביבליוגרפיה זו"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "אודות ספר זה"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "אודות פרק זה"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "אודות ערך זה"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "אודות מילון זה"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "אודות אינדקסזה"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "אודות חלק זה"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "אודות הקדמה זו"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "אודות הפניה זו"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "אודות אזורזה"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "אודות הסט הזה"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "יישומים"
+msgstr "צירוף"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "נספח"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "מאמר"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "קהל"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "מחבר"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "מחברים"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "ביבליוגרפיה"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "ספר"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "אזהרה"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "פרק"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "משתף פעולה"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "משתפי פעולה"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "קולופון"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "זכויות יוצרים"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "זכויות יוצרים"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "תאריך"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "חלק"
+msgstr "הקדשה"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_עריכה"
+msgstr "עורך"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "דוא\"ל"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "דוגמה"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "איור"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "מילון"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "חשוב"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -587,109 +561,107 @@ msgstr "אינדקס"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "הערה משפטית"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "רמה"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "קהל הודעה"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "רמת הודעה"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "מוצא הודעה"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "הערה"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "מוצא"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "תורם אחר"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "תורמים אחרים"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "חלק"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "הקדמה"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "מפרסם"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "מפרסמים"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "הפניה"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "ערך הפניה"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "אזור הפניה"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "מידע שחרור"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "היסטורית שינויים"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "ראה"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "ראה גם"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "אינדקס"
+msgstr "קבע אינדקס"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "טבלה"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "תכני עזרה"
+msgstr "תוכן העניינים"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "עצה"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "כותרת"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "אזהרה"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -699,55 +671,3 @@ msgstr "קבל עזרה עם GNOME"
 msgid "Help"
 msgstr "עזרה"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "המסמך '%s' אינו קיים"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>מצא טקסט במסמך:</b>"
-
-# he.po: To check!
-#~ msgid "Automatically _wrap around"
-#~ msgstr "_גלוש סביב באופן אוטומטי"
-
-#~ msgid "Find text..."
-#~ msgstr "מצא טקסט..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "התאם מילה _שלמה"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "ה_תאם אותיות גדולות/קטנות"
-
-#~ msgid "_Search for:"
-#~ msgstr "_חפש:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - שולחן העבודה"
-
-#~ msgid "Additional documents"
-#~ msgstr "מסמכים נוספים"
-
-#~ msgid "Manual Pages"
-#~ msgstr "דפי מדריך"
-
-#~ msgid "Info Pages"
-#~ msgstr "דפי מידע"
-
-#~ msgid "Manual pages"
-#~ msgstr "דפי מדריך"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME זה"
-
-#~ msgid "Free Software"
-#~ msgstr "תוכנה חופשית"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "טוען..."
-
-#~ msgid "Search in the index"
-#~ msgstr "חיפוש באינדקס"
