--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-09  Gil Osher  <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
 2004-07-04  Pawan Chitrakar  <pawan@nplinux.org>
 	
 	* ne.po: Nepali Updated Translation
